--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,40 @@
-fastapi
-uvicorn[standard]
-python-multipart
-aiofiles
-pandas
-numpy
-python-dotenv
-pydantic
-apify-client
-openai
-requests
-Pillow
-jinja2
+# Core FastAPI and server
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+python-multipart==0.0.6
 
+# File handling
+aiofiles==23.2.1
+
+# Data processing
+pandas==2.0.3
+numpy==1.24.4
+
+# Configuration
+python-dotenv==1.0.0
+
+# Data validation
+pydantic==2.5.0
+
+# API clients
+apify-client==1.7.1
+openai==1.3.0
+
+# HTTP requests - FIXED FOR SSL COMPATIBILITY
+requests==2.31.0
+urllib3==1.26.18
+certifi==2024.2.2
+
+# Image processing
+Pillow==10.1.0
+
+# Templating
+jinja2==3.1.2
+
+# Database - MongoDB
 pymongo==4.6.1
 motor==3.3.2
+
+# Additional dependencies for stability
+charset-normalizer==3.3.2
+idna==3.6
