--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ pydantic==2.5.0
 
 # API clients
 apify-client==1.7.1
-openai==1.3.0
+openai>=1.50.0
 
 # HTTP requests - FIXED FOR SSL COMPATIBILITY
 requests==2.31.0
